Removes dependency to Google Guava. Increases java language level to 10.