@@ -12,14 +12,14 @@ import com.dat3m.dartagnan.parsers.program.utils.ParsingException;
 import com.dat3m.dartagnan.parsers.program.utils.ProgramBuilder;
 import com.dat3m.dartagnan.program.Register;
 import com.dat3m.dartagnan.program.event.*;
-import com.google.common.collect.ImmutableSet;
 import org.antlr.v4.runtime.misc.Interval;
+import java.util.Set;
 
 public class VisitorLitmusPPC
         extends LitmusPPCBaseVisitor<Object>
         implements LitmusPPCVisitor<Object> {
 
-    private final static ImmutableSet<String> fences = ImmutableSet.of("Sync", "Lwsync", "Isync");
+    private final static Set<String> fences = Set.of("Sync", "Lwsync", "Isync");
 
     private ProgramBuilder programBuilder;
     private int mainThread;
@@ -99,7 +99,7 @@ public class VisitorLitmusPPC
 
     @Override
     public Object visitInstructionRow(LitmusPPCParser.InstructionRowContext ctx) {
-        for(Integer i = 0; i < threadCount; i++){
+        for(int i = 0; i < threadCount; i++){
             mainThread = i;
             visitInstruction(ctx.instruction(i));
         }
