@@ -14,14 +14,14 @@ import com.dat3m.dartagnan.program.event.Local;
 import com.dat3m.dartagnan.program.event.Store;
 import com.dat3m.dartagnan.program.arch.tso.event.Xchg;
 import com.dat3m.dartagnan.program.memory.Location;
-import com.google.common.collect.ImmutableSet;
 import org.antlr.v4.runtime.misc.Interval;
+import java.util.Set;
 
 public class VisitorLitmusX86
         extends LitmusX86BaseVisitor<Object>
         implements LitmusX86Visitor<Object> {
 
-    private final static ImmutableSet<String> fences = ImmutableSet.of("Mfence");
+    private final static Set<String> fences = Set.of("Mfence");
 
     private ProgramBuilder programBuilder;
     private int mainThread;
@@ -101,7 +101,7 @@ public class VisitorLitmusX86
 
     @Override
     public Object visitInstructionRow(LitmusX86Parser.InstructionRowContext ctx) {
-        for(Integer i = 0; i < threadCount; i++){
+        for(int i = 0; i < threadCount; i++){
             mainThread = i;
             visitInstruction(ctx.instruction(i));
         }
