@@ -1,9 +1,7 @@
 package com.dat3m.dartagnan.program.arch.tso.event;
 
-import com.dat3m.dartagnan.program.event.Event;
-import com.dat3m.dartagnan.wmm.utils.Arch;
-import com.google.common.collect.ImmutableSet;
 import com.dat3m.dartagnan.program.Register;
+import com.dat3m.dartagnan.program.event.Event;
 import com.dat3m.dartagnan.program.event.Local;
 import com.dat3m.dartagnan.program.event.MemEvent;
 import com.dat3m.dartagnan.program.event.rmw.RMWLoad;
@@ -12,19 +10,20 @@ import com.dat3m.dartagnan.program.event.utils.RegReaderData;
 import com.dat3m.dartagnan.program.event.utils.RegWriter;
 import com.dat3m.dartagnan.program.memory.Address;
 import com.dat3m.dartagnan.program.arch.tso.utils.EType;
-
+import com.dat3m.dartagnan.wmm.utils.Arch;
 import java.util.Arrays;
 import java.util.LinkedList;
+import java.util.Set;
 
 public class Xchg extends MemEvent implements RegWriter, RegReaderData {
 
     private final Register resultRegister;
-    private final ImmutableSet<Register> dataRegs;
+    private final Set<Register> dataRegs;
 
     public Xchg(Address address, Register register) {
         super(address, null);
         this.resultRegister = register;
-        this.dataRegs = ImmutableSet.of(resultRegister);
+        this.dataRegs = Set.of(resultRegister);
         addFilters(EType.ANY, EType.VISIBLE, EType.MEMORY, EType.READ, EType.WRITE, EType.ATOM, EType.REG_WRITER, EType.REG_READER);
     }
 
@@ -40,7 +39,7 @@ public class Xchg extends MemEvent implements RegWriter, RegReaderData {
     }
 
     @Override
-    public ImmutableSet<Register> getDataRegs(){
+    public Set<Register> getDataRegs(){
         return dataRegs;
     }
 
